@@ -1,3 +1,6 @@
+SVN
+* fix byte-compile warnings
+
 0.5.2
 * Bug fixes: #8221, #8223
 * Using system `tail` program for display log files
